# crazy-neural-mpc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  architecture.drawio  crazyflie.sh  launch_trajectory.sh  pixi.toml  requirements.txt
crazyflie_flocking_pkg/: setup.py
crazyflie_flocking_pkg/config/: config.yaml
crazyflie_flocking_pkg/crazyflie_flocking_pkg/: agent.py  flocking_forces.py
crazyflie_flocking_pkg/launch/: flocking.launch.py
crazyflie_mpc_pkg/: package.xml  setup.py
crazyflie_mpc_pkg/config/: config.yaml
crazyflie_mpc_pkg/crazyflie_mpc_pkg/mpc/: mpc.py  quadrotor_model.py
crazyflie_mpc_pkg/crazyflie_mpc_pkg/nodes/: crazyflie_mpc_node.py
crazyflie_mpc_pkg/crazyflie_mpc_pkg/trajectories/: circular_trajectory.py  polynomial_trajectory.py  trajectory.py
crazyflie_mpc_pkg/crazyflie_mpc_pkg/utils/: configuration.py  definitions.py
crazyflie_mpc_pkg/launch/: mpc.launch.py
crazyflie_plotter_pkg/: package.xml  setup.cfg  setup.py
crazyflie_simulation_pkg/: package.xml  setup.cfg  setup.py
crazyflie_swarm_interfaces/: CMakeLists.txt  package.xml
crazyflie_swarm_interfaces/msg/: CrazyfliePose.msg  CrazyflieState.msg  CrazyflieVelocity.msg  SwarmPoses.msg
crazyflie_swarm_interfaces/srv/: ForwardMotion.srv  Land.srv
crazyflie_swarm_pkg/: .gitignore  CMakeList.txt  package.xml  setup.cfg  setup.py
crazyflie_swarm_pkg/config/: config.yaml  (+3 more)
data/: dataset.npy
docs/: architecture.drawio  loco_positioning_system.md  run_crazyflie.md
simulation/ros_gz_crazyflie_gazebo/: CMakeLists.txt
simulation/ros_gz_crazyflie_gazebo/models/crazyflie_1/: model.sdf
simulation/ros_gz_crazyflie_gazebo/models/crazyflie_2/: model.sdf
simulation/ros_gz_crazyflie_gazebo/models/crazyflie_3/: model.sdf
simulation/ros_gz_crazyflie_gazebo/models/crazyflie_4/: model.sdf
simulation/ros_gz_crazyflie_gazebo/models/worlds/: crazyflie_world.sdf
simulation/ros_gz_crazyflie_gazebo/worlds/: crazyflie_world.sdf
(+146 files in other folders)
