<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crazyflie_mpc_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="97flavio.maiorana@gmail.com">neverorfrog</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>crazyflie_swarm_interfaces</exec_depend> 
  <exec_depend>crazyflie_swarm_pkg</exec_depend>  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
